wordpress/wordpress-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
