wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    #    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # < communicate in https with the backend (service/pod). With a "#" in front of http will be used.
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # < use letsencrypt-prod application in kubernetes to generate ssl certificate
#    nginx.ingress.kubernetes.io/app-root:  # < the root directory here if it's different from the root directory (like /web).
spec:
  ingressClassName: nginx
  tls: # < placing a host in the TLS config will indicate a cert should be created
    - hosts:
        - ionutbanu.com
        - www.ionutbanu.com
      secretName: ionutbanu.com-tls # < cert-manager will store the created certificate in this secret.
  rules:
    - host: ionutbanu.com
      http:
        paths:
          - path: /
            pathType: Prefix  # pathType no longer has a default value in v1; "Exact", "Prefix", or "ImplementationSpecific" must be specified
            backend:
              service:
                name: wordpress
                port:
                  name: http  # < same label as the port in the service tcp file
    - host: www.ionutbanu.com
      http:
        paths:
          - path: /
            pathType: Prefix  # pathType no longer has a default value in v1; "Exact", "Prefix", or "ImplementationSpecific" must be specified
            backend:
              service:
                name: wordpress
                port:
                  name: http  # < same label as the port in the service tcp file
